--- a/requirements.yml
+++ b/requirements.yml
@@ -1,10 +1,30 @@
 ---
 functional:
-  - Сайт должен быть способен обрабатывать большое количество трафика (например, 1000 одновременных пользователей)
+  - Пользователь может авторизоваться на сайте
+  - Пользователь может создать игру
+  - Пользователь может присоединиться к игре
+  - Пользователь может следить за игрой не посещая сайт, установив расширение для Chrome
+  - Пользователю доступны разные языки программирования
+  - После создания игры пользователь находится в режиме ожидания второго игрока  
+  - Пользователь может зайти в игру в качестве зрителя
+  - Пользователя соединяет с игрой, которую он выбрал
+  - Пользователи могут общаться в чате
+  - Оба пользователя видят два редактора (слева - свой редактор, справа - соперника)
+  - Наверху находится время игры и ниже - задание
+  - Каждый игрок видит код своего соперника в режиме он-лайн
+  - Каждый игрок имеет кнопку для проверки своего решения
+  - Количество попыток проверки решения неограниченно
+  - Когда один из игроков находит верное решение, обоим игрокам высвечивается модальное окно, где написано, кто является победителем этой игры  
+  - Соперник (после поражения) может выйти, а может доиграть до конца
+  - Победитель может выйти из игры по нажатию кнопки "exit", которая у него появилась
+  - Когда оба игрока вышли, игра считается полностью законченной и удаляется из памяти
 non-functional:
-  - Сайт должен быть безопасным и защищать данные пользователя
-  - Сайт должен быть протестирован на совместимость с последними версиями браузеров
-implicit:
-  - Сайт должен быть удобным на мобильном устройстве?
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
-
+  - Сайт должен быть безопасным и защищать данные пользователя
+  - Сайт должен быть удобным на мобильном устройстве
+  - Сайт должен быть протестирован на совместимость с последними версиями браузеров
+  - Сайт должен быть способен обрабатывать большое количество трафика (например, 1000 одновременных пользователей)
+implicit:
+  - Использование протокола HTTPS
+  - Адаптивная вёрстка
+  - Предусмотрена проверка уникальности пользователей
