--- a/test-cases.yml
+++ b/test-cases.yml
@@ -213,11 +213,8 @@
   expected-result: |
     Пользователь может вызывать проверку кода неограниченное число раз
 
-  # 15 Когда один из игроков находит верное решение, обоим игрокам |
-  # высвечивается модальное окно, где написано, кто является победителем этой игры
-
 - summary: | # 15.1
-    Модальное окно с именем победителя
+    Модальное окно победителя
   requirement: |
     Когда один из игроков находит верное решение, обоим игрокам
     высвечивается модальное окно, где написано, кто является победителем этой игры
