--- a/test-cases.yml
+++ b/test-cases.yml
@@ -3,7 +3,7 @@
     Проверка входа пользователя через аккаунт на GitHub
   requirement: |
     Пользователь может авторизоваться на сайте имея учетную запись на GitHub
-  prerequisites:
+  prerequisites: |
     Открыта страница логина
   test-data: |
     Профиль на GitHub = Michael57e
@@ -19,6 +19,7 @@
   prerequisites: |
     Пользователь авторизован на сайте
   test-data: |
+    нет
   steps:
     - Нажимаем кнопку "create a game"
     - В строке "game type" выбираем "with a bot"
@@ -33,6 +34,7 @@
   prerequisites: |
     Пользователь авторизован на сайте
   test-data: |
+    нет
   steps:
     - Нажимаем кнопку "create a game"
     - В строке "game type" выбираем "with other user"
@@ -44,10 +46,10 @@
     Проверка, что пользователь может присоединиться к игре
   requirement: |
     Пользователь может присоединиться к игре
-  prerequisites:
-    - Пользователь авторизован на сайте
-    - Создана игра с одним участником
+  prerequisites: |
+    Пользователь авторизован на сайте, создана игра с одним участником
   test-data: |
+    нет
   steps:
     - Нажимаем кнопку "Fight" в списке доступных игр
   expected-result: |
@@ -57,10 +59,10 @@
     Пользователю доступны разные языки программирования
   requirement: |
     Пользователю доступны разные языки программирования
-  prerequisites:
-    - Пользователь авторизован на сайте
-    - Пользователь вступил в игру
+  prerequisites: |
+    Пользователь авторизован на сайте, и вступил в игру
   test-data: |
+    нет
   steps:
     - В открывающемся списке выбираем любой доступный язык, кроме текущего 
   expected-result: |
@@ -70,10 +72,10 @@
     После создания игры пользователь находится в режиме ожидания второго игрока
   requirement: |
     После создания игры пользователь находится в режиме ожидания второго игрока
-  prerequisites:
-    - Пользователь авторизован на сайте
-    - Пользователь создал игру с другим участником
+  prerequisites: |
+    Пользователь авторизован на сайте и создал игру с другим участником
   test-data: |
+    нет
   steps:
     - Нажимаем "create a game"
     - Отмечаем "with other user"
@@ -84,10 +86,10 @@
     Пользователь может зайти в игру в качестве зрителя
   requirement: |
     Пользователь может зайти в игру в качестве зрителя
-  prerequisites:
-    - Пользователь авторизован на сайте
-    - Создана игра, в которой участвуют два других пользователя
+  prerequisites: |
+    Пользователь авторизован на сайте. Создана игра, в которой участвуют два других пользователя
   test-data: |
+    нет
   steps:
     - Нажать кнопку "Show"
   expected-result: |
@@ -97,10 +99,10 @@
     Пользователя соединяет с игрой, которую он выбрал
   requirement: |
     Пользователя соединяет с игрой, которую он выбрал
-  prerequisites:
-    - Пользователь авторизован на сайте
-    - Пользователь Б создал игру
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь Б создал игру
   test-data: |
+    нет
   steps:
     - Нажать кнопку "Fight"
   expected-result: |
@@ -110,10 +112,10 @@
     Пользователи могут общаться в чате на главной странице
   requirement: |
     Пользователи могут общаться в чате на главной странице
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь находится на главной странице
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь находится на главной странице
   test-data: |
+    нет
   steps:
     - Вводим сообщение "Hello" в строку ввода
     - Нажимаем кнопку "Send"
@@ -124,10 +126,10 @@
     Пользователи могут общаться в чате
   requirement: |
     Пользователи могут общаться в чате
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь вступил в игру
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь вступил в игру
   test-data: |
+    нет
   steps:
     - Вводим сообщение "Hello" в строку ввода
     - Нажимаем кнопку "Send"
@@ -138,10 +140,10 @@
     Отображение редакторов кода в Desktop версии
   requirement: |
     Оба пользователя видят два редактора (слева - свой редактор, справа - соперника)
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь вступил в игру
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь вступил в игру
   test-data: |
+    нет
   steps:
     - В нижней части экрана отображаются два редактора кода (слева - свой редактор, справа - соперника)
   expected-result: |
@@ -151,10 +153,10 @@
     Отображение редакторов кода в мобильной версии
   requirement: |
     Оба пользователя видят два редактора (сверху - свой редактор, снизу - соперника)
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь вступил в игру
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь вступил в игру
   test-data: |
+    нет
   steps:
     - В нижней части экрана отображаются два редактора кода (сверху - свой редактор, снизу - соперника)
   expected-result: |
@@ -164,10 +166,10 @@
     Наверху экрана находится время игры
   requirement: |
     Наверху экрана находится время игры
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь вступил в игру
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь вступил в игру
   test-data: |
+    нет
   steps:
     - Найти вверху экрана поле с обратным отсчетом времени
   expected-result: |
@@ -177,10 +179,10 @@
     Наверху экрана находится задание
   requirement: |
     Наверху экрана находится задание
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь вступил в игру
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь вступил в игру
   test-data: |
+    нет
   steps:
     - Найти поле с заданием игры
   expected-result: |
@@ -190,10 +192,10 @@
     Отображение кнопки для проверки решения
   requirement: |
     Пользователь имеет кнопку для проверки своего решения
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь вступил в игру
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь вступил в игру
   test-data: |
+    нет
   steps:
     - Нажать кнопку "Run"
   expected-result: |
@@ -203,10 +205,10 @@
     Количество попыток проверки решения неограниченно
   requirement: |
     Количество попыток проверки решения неограниченно
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь вступил в игру
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь вступил в игру
   test-data: |
+    нет
   steps:
     - Нажать кнопку "Run"
     - Повторить действие
@@ -218,10 +220,10 @@
   requirement: |
     Когда один из игроков находит верное решение, обоим игрокам
     высвечивается модальное окно, где написано, кто является победителем этой игры
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь вступил в игру
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь вступил в игру
   test-data: |
+    нет
   steps:
     - Победить в игре
   expected-result: |
@@ -231,10 +233,10 @@
     Пользователь, после поражения, может доиграть до конца отведенного времени
   requirement: |
     Пользователь, после поражения, может доиграть до конца отведенного времени
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь проиграл в игре
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь проиграл в игре
   test-data: |
+    нет
   steps:
     - Пользователь продолжает играть до истечения отведенного времени
   expected-result: |
@@ -244,10 +246,10 @@
     После победы в игре появилась кнопка выхода
   requirement: |
     У победителя появилась кнопка "Exit"
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь выиграл в игре
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь выиграл в игре
   test-data: |
+    нет
   steps:
     - Появилась кнопка "Exit"
   expected-result: |
@@ -257,10 +259,10 @@
     После победы кнопка "Exit" выводит на главную страницу
   requirement: |
     Победитель может выйти из игры по нажатию кнопки "exit", которая выведет его на главную страницу
-  prerequisites: 
-    - Пользователь авторизован на сайте
-    - Пользователь выиграл в игре
+  prerequisites: |
+    Пользователь авторизован на сайте. Пользователь выиграл в игре
   test-data: |
+    нет
   steps:
     - Нажать кнопку "exit"
   expected-result: |
@@ -281,23 +283,14 @@
   expected-result: |
     Игра не отображается в списке активных игр
 
-- summary: | # 21
-    Сайт удобнен на мобильном устройстве
-  requirement: |
-    Сайт удобнен на мобильном устройстве
-  prerequisites: 
-  test-data: |
-  steps:
-    - Открыть сайт на мобильнм телефоне
-  expected-result: |
-    Сайт отображается на мобильном устройстве, все элементы верстки отображаются корректно
-
 - summary: | # 22
     Сайт совместим с последними версиями браузеров
   requirement: |
     Сайт совместим с последними версиями браузеров
-  prerequisites: 
+  prerequisites: |
+    нет
   test-data: |
+    нет
   steps:
     - Открыть сайт в браузере Google Chrome
     - Открыть сайт в браузере Safari
