--- a/testing-report.yml
+++ b/testing-report.yml
@@ -73,11 +73,11 @@
 
 - summary: | # 17.1
     После победы в игре появилась кнопка выхода
-  status: fall
+  status: fail
 
 - summary: | # 17.2
     После победы кнопка "Exit" выводит на главную страницу
-  status: fall
+  status: fail
 
 - summary: | # 18
     Проверка, что игра удаляется из памяти после выхода обоих игроков
