--- a/test-cases.yml
+++ b/test-cases.yml
@@ -23,6 +23,7 @@
   steps:
     - Нажимаем кнопку "create a game"
     - В строке "game type" выбираем "with a bot"
+    - Остальные параметры оставляем дефолтными
     - Нажимаем кнопку "create a battle"
   expected-result: |
     Пользователь должен создать игру против бота
@@ -38,6 +39,7 @@
   steps:
     - Нажимаем кнопку "create a game"
     - В строке "game type" выбираем "with other user"
+    - Остальные параметры оставляем дефолтными
     - Нажимаем кнопку "create a battle"
   expected-result: |
     Пользователь создал игру против другого пользователя
@@ -123,9 +125,9 @@
     Сообщение отправлено в чат
 
 - summary: | # 9.2
-    Пользователи могут общаться в чате
+    Пользователи могут общаться в чате в игре
   requirement: |
-    Пользователи могут общаться в чате
+    Пользователи могут общаться в чате в игре
   prerequisites: |
     Пользователь авторизован на сайте. Пользователь вступил в игру
   test-data: |
@@ -221,13 +223,29 @@
     Когда один из игроков находит верное решение, обоим игрокам
     высвечивается модальное окно, где написано, кто является победителем этой игры
   prerequisites: |
-    Пользователь авторизован на сайте. Пользователь вступил в игру
+    Пользователь авторизован на сайте
   test-data: |
-    нет
+    level = 1
+    game type = with a bot
+    time control = 10 min
+    task = rect_area
+
+    code =
+    const _ = require("lodash");
+    const R = require("rambda");
+
+    const solution = (width, length) => {
+      return width * length;
+    };
+
+    module.exports = solution;
   steps:
-    - Победить в игре
+    - Создать игру с заданными параметрами
+    - Выбрать язык Node.js
+    - Дописать код, чтобы он соответствовал коду из test-data
+    - Нажать "Run"
   expected-result: |
-    Пользователь видит модальное окно с именем победителя
+    Пользователь видит модальное окно победителя со своим именем
 
 - summary: | # 16.1
     Пользователь, после поражения, может доиграть до конца отведенного времени
@@ -290,10 +308,47 @@
   prerequisites: |
     нет
   test-data: |
-    нет
+    Браузеры Google Chrome v. 138, Safari v. 5.1, Firefox v. 140
   steps:
-    - Открыть сайт в браузере Google Chrome
-    - Открыть сайт в браузере Safari
-    - Открыть сайт в браузере Firefox
+    - Открыть главную страницу
+    - Создать игру
+    - Завершить игру
+    - Открыть профиль пользователя
+    - Открыть настройки профиля
+    - Смненить браузер и повторить шаги
   expected-result: |
-    Сайт совместим с последними версиями браузеров
+    Все шаги выполняются корректно. Сайт корректно работает на последних
+    версиях браузеров
+
+- summary: | # 23
+    Игра завершается по истечению времени игры
+  requirement: |
+    Игра завершилась, когда истекло время на таймере игры.
+    Результат игры - победителя нет
+  prerequisites: |
+    Пользователь авторизован
+  test-data: |
+    level = 1
+    game type = with a bot
+    time control = 3 min
+  steps:
+    - Создать игру с заданными параметрами (остальное - дефолтные)
+    - Дождаться истечения времени на таймере
+  expected-result: |
+    Игра завершилась. Результат игры - победителя нет
+
+- summary: | # 24
+    Игра завершается при сдаче пользователя
+  requirement: |
+    Игра завершилась, когда пользователь сдался
+  prerequisites: |
+    Пользователь авторизован
+  test-data: |
+    level = 1
+    game type = with a bot
+  steps:
+    - Создать игру с заданными параметрами (остальное - дефолтные)
+    - Кликнуть "Other actions", "Give up"
+    - Подтвердить действие в модальном окне
+  expected-result: |
+    Появилось модальное окно, сообщающее что пользователь проиграл
