--- a/testing-report.yml
+++ b/testing-report.yml
@@ -28,7 +28,7 @@
   status: pass
 
 - summary: | # 8
-    Пользователя соединяет с игрой, которую он выбрал
+    Пользователя соединяет с игрой, которую он выбирает
   status: pass
 
 - summary: | # 9.1
@@ -36,7 +36,7 @@
   status: pass
 
 - summary: | # 9.2
-    Пользователи могут общаться в чате
+    Пользователи могут общаться в чате в игре
   status: pass
 
 - summary: | # 10.1
@@ -89,4 +89,12 @@
 
 - summary: | # 22
     Сайт совместим с последними версиями браузеров
+  status: pass
+
+- summary: | # 23
+    Игра завершается по истечению времени игры
+  status: pass
+
+- summary: | # 24
+    Игра завершается при сдаче пользователя
   status: pass
