--- a/test-cases.yml
+++ b/test-cases.yml
@@ -221,8 +221,7 @@
 - summary: | # 15.1
     Модальное окно победителя
   requirement: |
-    Когда один из игроков находит верное решение, обоим игрокам
-    высвечивается модальное окно, где написано, кто является победителем этой игры
+    В случае победы в игре у пользователя появляется модальное окно победителя
   prerequisites: |
     Пользователь авторизован на сайте
   test-data: |
@@ -245,7 +244,7 @@
     - Дописать код, чтобы он соответствовал коду из test-data
     - Нажать "Run"
   expected-result: |
-    Пользователь видит модальное окно победителя со своим именем
+    Пользователь видит модальное окно победителя
 
 - summary: | # 16.1
     Пользователь, после поражения, может доиграть до конца отведенного времени
@@ -308,13 +307,13 @@
   prerequisites: |
     нет
   test-data: |
-    Браузеры Google Chrome v. 138, Safari v. 5.1, Firefox v. 140
+    Браузеры Google Chrome v.138, Firefox v.140, Safari v.18.4 (MacOS)
   steps:
     - Открыть главную страницу
     - Создать игру
     - Завершить игру
+    - Авторизоваться
     - Открыть профиль пользователя
-    - Открыть настройки профиля
     - Смненить браузер и повторить шаги
   expected-result: |
     Все шаги выполняются корректно. Сайт корректно работает на последних
